--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-picker/picker": "2.6.1",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "expo": "~50.0.14",
+    "expo-splash-screen": "~0.26.5",
+    "expo-sqlite": "~13.4.0",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.4",
     "react": "18.2.0",
@@ -22,9 +25,7 @@
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "expo-splash-screen": "~0.26.4",
-    "expo-sqlite": "~13.4.0"
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
