--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "habbit-io-draft",
+  "name": "habbit-io",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -27,7 +27,9 @@
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "expo-notifications": "~0.27.7"
+    "expo-notifications": "~0.27.7",
+    "expo-device": "~5.9.4",
+    "@react-native-community/datetimepicker": "7.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
