update project id eas

--- a/app.json
+++ b/app.json
@@ -11,7 +11,9 @@
       "resizeMode": "cover",
       "backgroundColor": "#191818"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -25,10 +27,9 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-
     "extra": {
       "eas": {
-        "projectId": "ef2f6b0f-66ab-4614-bae7-cd193faa844a"
+        "projectId": "805aa476-6ff6-427c-82dc-5fbde0846061"
       }
     }
   }
